@@ -19,6 +19,8 @@ php:
 
 matrix:
   fast_finish: true
+  allow_failures:
+    - php: 7
 
 env:
   global:
